# pyvolt

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  README.rst  TODO.md  docs_requirements.txt  gen_todo.py  mkdocs.yml  pyproject.toml  requirements.txt  ruff.toml
bench/: __main__.py  bench_channel.py  bench_member.py  bench_message.py  bench_server.py  bench_user.py
dev/: githook.py
docs/: api.rst  conf.py  index.md  index.rst
docs/_static/: style.css
docs/extensions/: attributetable.py  builder.py  exception_hierarchy.py  resourcelinks.py
examples/: get_pms.py  mfa.py  ping_pong.py
pyvolt/: __init__.py  __main__.py  abc.py  auth.py  authentication.py  base.py  bot.py  cache.py  cdn.py  channel.py  client.py  context_managers.py  core.py  discovery.py  embed.py  emoji.py  enums.py  errors.py  events.py  flags.py  http.py  instance.py  invite.py  localization.py  message.py  parser.py  permissions.py  read_state.py  routes.py  safety_reports.py  server.py  settings.py  shard.py  state.py  ulid.py  user.py  user_settings.py  utils.py  webhook.py
pyvolt/ext/commands/: __init__.py  _types.py  bot.py  cache.py  context.py  converter.py  cooldown.py  core.py  errors.py  events.py  gear.py  parameters.py  view.py
pyvolt/raw/: __init__.py  authifier.py  basic.py  bots.py  channel_invites.py  channel_unreads.py  channel_webhooks.py  channels.py  discovery.py  embeds.py  emojis.py  files.py  gateway.py  localization.py  messages.py  misc.py  permissions.py  safety_reports.py  server_bans.py  server_members.py  servers.py  user_settings.py  users.py
scripts/docs/: gen_ref_pages.py
test/: test_discovery.py
test/data/channels/: saved_messages.json
test/data/channels/messages/: ayana.json  rules.json
test/data/channels/messages/embeds/: youtube_website.json
test/data/discovery/: bots.json  servers.json  themes.json
test/data/users/: mecha.json
tests/: test_client.py  test_discovery.py  test_flags.py
tests/data/channels/: dm.json  group.json  rules_channel.json  voice.json
tests/data/channels/messages/embeds/: revolt_website.json  text.json
tests/data/discovery/: bots.json  servers.json
tests/data/servers/: member.json  server.json  server_with_channels.json
tests/data/users/: me.json  user.json
